--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: sub4dart
-description: Implements the Subsonic API into pure dart for use in other applications.
+name: air4dart
+description: Implements the Airsonic API into pure dart for use in other applications.
 version: 0.0.5
-homepage: https://github.com/LucasCLuk/sub4dart
-author: lucas <lucaslukowski@gmail.com>
+homepage: https://github.com/jacob-shuman/air4dart
+author: Jacob Shuman <jacob.shuman7@gmail.com>
 
 dependencies:
   crypto: ^2.0.6
